--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-CherryPy==3.8.1
-psutil==3.3.0
+cheroot==6.0.0
+CherryPy==14.0.0
+more-itertools==4.1.0
+portend==2.2
+psutil==5.4.3
+pytz==2018.3
+six==1.11.0
+tempora==1.10
