Add sysstat to the supporting package

--- a/playbooks/roles/probe_server/tasks/main.yml
+++ b/playbooks/roles/probe_server/tasks/main.yml
@@ -28,7 +28,7 @@
 
 - name: Installing supporting packages
   apt:
-    name: [numactl]
+    name: [numactl, sysstat]
     state: latest
   tags:
     - probe
