Run CI on different port to accomodate the CI server being monitored

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,9 @@ functional_test_job:
   stage: functional_test
   script:
     - ./start.sh
-    - curl http://localhost:27182/json/status
+    #Run on a different port since the CI server might be monitored too
+    - sed -i -e 's/server.socket_port = 27182/server.socket_port = 17182/'
+    - curl http://localhost:17182/json/status
     - ./stop.sh
   only:
     - master
