--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ functional_test_job:
   script:
     - ./start.sh
     #Run on a different port since the CI server might be monitored too
-    - sed -i -e 's/server.socket_port = 27182/server.socket_port = 17182/'
+    - sed -i -e 's/server.socket_port = 27182/server.socket_port = 17182/' server.conf
     - curl http://localhost:17182/json/status
     - ./stop.sh
   only:
