--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-cheroot==6.0.0
-CherryPy==14.0.0
-more-itertools==4.1.0
-portend==2.2
+click==6.7
+Flask==0.12.2
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
 psutil==5.4.3
-pytz==2018.3
-six==1.11.0
-tempora==1.10
+Werkzeug==0.14.1
