--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,8 +32,7 @@ functional_test_job:
   stage: functional_test
   script:
     #Run on a different port since the CI server might be monitored too
-    - sed -i -e 's/server.socket_port = 27182/server.socket_port = 17182/' server.conf
-    - ./start.sh
+    - ./start.sh -p 17182
     - curl http://localhost:17182/json/status
     - ./stop.sh
   only:
