Only install numactl on platforms where it is available (no arm7l i.e. RPi)

--- a/playbooks/roles/probe_server/tasks/main.yml
+++ b/playbooks/roles/probe_server/tasks/main.yml
@@ -28,8 +28,16 @@
 
 - name: Installing supporting packages
   apt:
-    name: [numactl, sysstat]
+    name: [sysstat]
     state: latest
+  tags:
+    - probe
+
+- name: Installing supporting packages (except on Raspbian)
+  apt:
+    name: [numactl]
+    state: latest
+  when: ansible_architecture != 'armv7l'
   tags:
     - probe
 
