Expand list of architectures to not install numactl on to include RPi Zero W

--- a/playbooks/roles/probe_server/tasks/main.yml
+++ b/playbooks/roles/probe_server/tasks/main.yml
@@ -37,7 +37,7 @@
   apt:
     name: [numactl]
     state: latest
-  when: ansible_architecture != 'armv7l'
+  when: ansible_architecture not in ['armv6l', 'armv7l']
   tags:
     - probe
 
