--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-click==6.7
-Flask==1.0.2
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
-psutil==5.4.7
-Werkzeug==0.14.1
+Click==7.0
+Flask==1.0.3
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+psutil==5.6.3
+Werkzeug==0.15.4
