--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-click==7.1.2
-Flask==1.1.2
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-psutil==5.8.0
-Werkzeug==1.0.1
+click==8.1.3
+Flask==2.2.3
+importlib-metadata==6.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+psutil==5.9.4
+Werkzeug==2.2.3
+zipp==3.14.0
